--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js:
        		 - "node"
 script:
-	- echo “toto”
-	- npm update
+	- echo “check jshint”
+	- node_modules/.bin/jshint src
 
