--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-language: node_js:
-       		 - "node"
+language: node_js
+node_js:
+ - "node"
+
 script:
 - echo “check jshint”
 - node_modules/.bin/jshint src
